# security_info_bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: cisa_kev.yml  twcert.yml
cisa_kev/2026-05/: analysis_cisa_kev_2026-05-01_20260529_083712.json  analysis_cisa_kev_2026-05-27_20260528_035228.json  analysis_cisa_kev_2026-05-29_20260530_050056.json  cisa_kev_2026-05-27_20260528_035153.json  cisa_kev_2026-05-28_20260528_025745.json  cisa_kev_2026-05-28_20260528_125622.json  cisa_kev_2026-05-28_20260529_165453.json  cisa_kev_2026-05-29_20260530_105426.json
docs/: architecture.md  archive-branch.md  configuration.md  data-models.md  deployment.md  error-handling.md
ioc/: ioc_TWCERT-TWISAC-202605-0025.txt  tmpsdu03gur.txt
src/: config.py  models.py
src/analyzer/: gemini.py  prompt.py
src/data/: analysis_twcert_20260527_174915.json
src/fetchers/: cisa_kev.py  storage.py  twcert.py
src/parsers/: ioc_xlsx.py
src/sinks/: git_archive.py  sheets.py
src/utils/: errors.py  logging.py
tests/: test_cisa_kev_fetcher.py  test_ioc_parser.py  test_sheet_writeback.py  test_storage.py  test_twcert_since.py
tests/fixtures/: sample_assets.json  sample_twcert_iocs.xlsx
twcert/2026-05/: analysis_twcert_2026-05-28_20260528_125700.json  analysis_twcert_2026-05-28_20260529_122731.json  ioc_TWCERT-TWISAC-202605-0003.txt  twcert_2026-05-22_20260528_035859.json  twcert_2026-05-22_20260528_125038.json  twcert_2026-05-22_20260528_125118.json  twcert_2026-05-27_20260528_035416.json  twcert_2026-05-28_20260528_125645.json  (+5 more)
